HW7. Started 480px

--- a/Practice/HW7/css/style.css
+++ b/Practice/HW7/css/style.css
@@ -1,15 +1,7 @@
 .body_wrapper {
-    max-width: 320px;
-    /*height: 516px;*/
+    max-width: 480px;
     margin: 0 auto;
     font-family: "LeagueGothic", Arial, sans-serif;
-
-}
-
-.position-center {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
 .title {
@@ -46,9 +38,6 @@
     font-size: 12px;
 }
 
-
-
-
 .link {
     display: inline-block;
     white-space: nowrap;
@@ -68,14 +57,12 @@
 /*HEADER*/
 
 .header {
+    position: relative;
     width: 100%;
     background: url("../img/320/header_bg.jpg") no-repeat center center;
 }
 
 .logo {
-    padding-top: 73px;
-   margin-left: -1px;
-    margin-bottom: 34px;
     font-size: 48px;
     letter-spacing: -0.01em;
     color: rgb(255, 255, 255);
@@ -88,10 +75,20 @@
     letter-spacing: -0.03em;
 }
 
+.overlay {
+    position: absolute;
+    background-color: rgb(0, 0, 0);
+    opacity: 0.2;
+    left: 0px;
+    top: 203px;
+    width: 2400px;
+    height: 246px;
+}
+
+
+
 .slider {
-    margin-top: 127px;
-    padding-left: 13px;
-    margin-bottom: 65px;
+
 }
 
 .slider__name {
@@ -114,100 +111,100 @@
 }
 
 .slider__switch {
-    margin-top: 78px;
-    padding-left: 58px;
+
 }
 
 /*ABOUT COMPANY  block*/
 .about_company{
     width: 100%;
-    padding-bottom: 42px;
+   /* padding-bottom: 42px;*/
     border-top: 1px solid #33253a;
     border-bottom: 1px solid #0d151b;
     background: linear-gradient( #745083, #322539);
     color: rgb(255, 255, 255);
     text-shadow: 0 1px 0 rgba(15, 21, 24, 0.004);
-
 }
 
 .info_block {
     box-sizing: border-box;
-    margin-top: 70px;
+    /*margin-top: 70px;
     margin-bottom: 20px;
     padding-left: 17.1875%;
-    width: 82.8%;
+    width: 82.8%;*/
     background: url("../img/info_icons_1.png") no-repeat -91px -1px;
 }
 
 .info_block:nth-child(2) {
-    margin-top: 2px;
+   /* margin-top: 2px;*/
     background: url("../img/info_icons_1.png") no-repeat -51px -30px;
 }
 
 .info_block:nth-child(3) {
-    margin-top: 18px;
+    /*margin-top: 18px;*/
     background: url("../img/info_icons_1.png") no-repeat -7px -55px;
 }
 
 .about_company__summary {
-    margin-top: 3px;
-    height: 70px;
+    /*margin-top: 3px;
+    height: 70px;*/
     overflow: hidden;
 }
 
 .about_company__link {
-    margin-top: 15px;
-    margin-left: 74.6%;
+    /*margin-top: 15px;
+    margin-left: 74.6%;*/
     letter-spacing: -0.002em;
 }
 
 /*Блок NEWS*/
 
 .news {
+    width: 100%;
     background: #f9f9f9;
     color: rgb(69, 69, 69);
     text-shadow: 0 1px 0 rgba(255, 255, 255, 0.004);
 }
 
-.avatar {
+/*.avatar {
     position: absolute;
     top: 17px;
     left: -26px;
-}
+}*/
 
 .news__info_block {
     box-sizing: border-box;
     position: relative;
-    width: 80%;
+    background: #ffffff;
+    /*width: 80%;
     margin-top: 70px;
     margin-bottom: 20px;
     margin-left: 8%;
-    padding-left: 12%;
-    background: #ffffff;
+    padding-left: 12%;*/
 
 }
 
-.news__name {
+/*.news__title {
     margin-left: -4px;
     margin-top: 25px;
     letter-spacing: -0.001em;
-}
+}*/
 
 
 
 .news__summary {
-    overflow: hidden;
-    margin-top: 4px;
+    /*margin-top: 4px;
     height: 166px;
-    padding-right: 17%;
+    padding-right: 17%;*/
+    overflow: hidden;
     letter-spacing: -0.01em;
     word-wrap: break-word ;
     -moz-hyphens: auto;
     -webkit-hyphens: auto;
     -ms-hyphens: auto;
+
 }
 
-.news__title--description {
+/*.news__title--description {
     margin-left: -3px;
     margin-top: -1px;
 }
@@ -216,12 +213,12 @@
     margin-top: 33px;
     margin-left: 16.5%;
     width: 28.125%;
-}
+}*/
 
 /*RECENT UODATES*/
 
 
-.updates {
+.recent_updates {
     margin-top: 49px;
     width: 100%;
     border-bottom: 1px solid #e6e6e6;
@@ -229,45 +226,43 @@
 
 }
 
-.updates__title {
+/*.updates__title {
     margin-bottom: 19px;
     margin-left: 6.1%;
 }
-
-.post {
-    width: 67.5%;
+*/
+.recent_updates__post {
+    /*width: 67.5%;
     margin-left: 6.1%;
     padding-left: 20.75%;
-    margin-bottom: 16px;
+    margin-bottom: 16px;*/
     background: url("../img/updates_pict.png") no-repeat left top;
 }
 
-.post:nth-child(3) {
+/*.recent_updates__post:nth-child(3) {
     margin-bottom: 24px;
 }
 
-
-
-.updates__link {
+.recent_updates__link {
     margin-left: 64.5%;
     margin-bottom: 86px;
-}
+}*/
 
 
 /*BANNERS*/
 
-.banners {
-    margin-bottom: 16px;
+/*.banners {
     width:75% ;
+    margin-bottom: 16px;
     padding-top: 52px;
-}
+}*/
 
 .banners__item {
     float: left;
-    margin-bottom: 61px;
+    /*margin-bottom: 61px;*/
 }
 
-.banner1 {
+/*.banner1 {
     margin-left: 9.5%;
     margin-right: 23%;
 }
@@ -285,7 +280,7 @@
 
 .banner6 {
     margin-top: -19px;
-}
+}*/
 
 
 /*FOOTER*/
@@ -297,6 +292,6 @@
     text-shadow: 0 2px 2px rgba(0, 0, 0, 0.4);
 }
 
-.footer__summary {
+/*.footer__summary {
     margin: 39px 0 144px;
-}
+}*/
