--- a/Practice/HW7/css/style.css
+++ b/Practice/HW7/css/style.css
@@ -217,7 +217,7 @@
 
 
 .recent_updates {
-    margin-top: 49px;
+    padding-top: 49px;
     width: 100%;
     border-bottom: 1px solid #e6e6e6;
     background: #f9f9f9;
