HW7. 420 Added News Categories

--- a/Practice/HW7/css/width320.css
+++ b/Practice/HW7/css/width320.css
@@ -3,13 +3,12 @@
    .overlay {
         display: none;
     }
-    .slider__pict {
+    .slider__img {
         display: none;
     }
 
 .hidden {
         display: none;
-
     }
 
 
