--- a/Practice/HW7/css/style.css
+++ b/Practice/HW7/css/style.css
@@ -1,5 +1,4 @@
 .body_wrapper {
-    /*max-width: 480px;*/
     margin: 0 auto;
     font-family: "LeagueGothic", Arial, sans-serif;
 }
@@ -7,6 +6,9 @@
     content: "";
     display: table;
     clear: both;
+}
+.hidden-all {
+    visibility: hidden;
 }
 
 .title {
@@ -85,14 +87,10 @@
     position: absolute;
     background-color: rgb(0, 0, 0);
     opacity: 0.2;
-    left: 0px;
+    left: 0;
     top: 203px;
     width: 2400px;
     height: 246px;
-}
-
-.slider {
-
 }
 
 .slider__name {
@@ -130,33 +128,23 @@
 
 .info_block {
     box-sizing: border-box;
-    /*margin-top: 70px;
-    margin-bottom: 20px;
-    padding-left: 17.1875%;
-    width: 82.8%;*/
     background: url("../img/info_icons_1.png") no-repeat -90px -1px;
 }	
 
 .info_block:nth-child(2) {
-   /* margin-top: 2px;*/
     background: url("../img/info_icons_1.png") no-repeat -55px -30px;
 }
 
 .info_block:nth-child(3) {
-    /*margin-top: 18px;*/
-    background: url("../img/info_icons_1.png") no-repeat -14px -55px;
+   background: url("../img/info_icons_1.png") no-repeat -14px -55px;
 }
 
 .about_company__summary {
-    /*margin-top: 3px;
-    height: 70px;*/
-    overflow: hidden;
+     overflow: hidden;
 }
 
 .about_company__link {
-    /*margin-top: 15px;
-    margin-left: 74.6%;*/
-    letter-spacing: -0.002em;
+      letter-spacing: -0.002em;
 }
 
 /*Блок NEWS*/
@@ -168,36 +156,13 @@
     text-shadow: 0 1px 0 rgba(255, 255, 255, 0.004);
 }
 
-/*.avatar {
-    position: absolute;
-    top: 17px;
-    left: -26px;
-}*/
-
 .pingbuller__info_block {
     box-sizing: border-box;
     position: relative;
     background: #ffffff;
-    /*width: 80%;
-    margin-top: 70px;
-    margin-bottom: 20px;
-    margin-left: 8%;
-    padding-left: 12%;*/
-
 }
 
-/*.pingbuller__title {
-    margin-left: -4px;
-    margin-top: 25px;
-    letter-spacing: -0.001em;
-}*/
-
-
-
 .pingbuller__summary {
-    /*margin-top: 4px;
-    height: 166px;
-    padding-right: 17%;*/
     overflow: hidden;
     letter-spacing: -0.01em;
     word-wrap: break-word ;
@@ -207,50 +172,18 @@
 
 }
 
-/*.news__title--description {
-    margin-left: -3px;
-    margin-top: -1px;
-}
-
-.news__switch {
-    margin-top: 33px;
-    margin-left: 16.5%;
-    width: 28.125%;
-}*/
-
 /*RECENT UODATES*/
-
 
 .recent_updates {
     padding-top: 48px;
     width: 100%;
     border-bottom: 1px solid #e6e6e6;
     background: #f9f9f9;
-
 }
 
-/*.updates__title {
-    margin-bottom: 19px;
-    margin-left: 6.1%;
-}
-*/
 .recent_updates__post {
-    /*width: 67.5%;
-    margin-left: 6.1%;
-    padding-left: 20.75%;
-    margin-bottom: 16px;*/
     background: url("../img/updates_pict.png") no-repeat left top;
 }
-
-/*.recent_updates__post:nth-child(3) {
-    margin-bottom: 24px;
-}
-
-.recent_updates__link {
-    margin-left: 64.5%;
-    margin-bottom: 86px;
-}*/
-
 
 /*BANNERS*/
 
@@ -262,33 +195,24 @@
     -webkit-border-image: url(../img/banner_border_bottom.png) 0 0 2;
     -o-border-image: url(../img/banner_border_bottom.png) 0 0 2;
     border-image: url(../img/banner_border_bottom.png) 0 0 2 fill;
-   /* border-image: url("../img/banner_border_bottom.png") 0 0 2 repeat;*/
 }
 
 .banners__item {
     float: left;
-    /*margin-bottom: 61px;*/
 }
 
-/*.banner1 {
-    margin-left: 9.5%;
-    margin-right: 23%;
+/*NEWS CATEGORIES*/
+
+.news_categories {
+    padding-top: 63px;
+    background: #ececec;
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.004);
+    color: rgb(69, 69, 69);
 }
 
-.banner3 {
-    margin-left: 12.5%;
-    margin-right: 27%;
+.news_categories__summary {
+    color: rgb(120, 120, 120);
 }
-
-.banner5 {
-    margin-left: 1%;
-    margin-right: 23%;
-    margin-top: 2px;
-}
-
-.banner6 {
-    margin-top: -19px;
-}*/
 
 
 /*FOOTER*/
@@ -299,7 +223,3 @@
     color: rgb(255, 255, 255);
     text-shadow: 0 2px 2px rgba(0, 0, 0, 0.4);
 }
-
-/*.footer__summary {
-    margin: 39px 0 144px;
-}*/
