--- a/Practice/HW7/css/style.css
+++ b/Practice/HW7/css/style.css
@@ -11,6 +11,12 @@
     visibility: hidden;
 }
 
+.position-center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .title {
     font: 24px "LeagueGothic", Arial, sans-serif;
     line-height: 1;
