--- a/Practice/HW7/css/menu.css
+++ b/Practice/HW7/css/menu.css
@@ -1,12 +1,12 @@
+
 .menu__item {
-    margin-left: 1px;
-    /*width: 47px;*/
+
 }
 
 
 .menu__link {
     display: block;
-    border-bottom: 2px solid #edbfff;
+    /*border-bottom: 2px solid #edbfff;*/
     font-size: 24px;
     font-family: "LeagueGothic", Arial, sans-serif;
     line-height: 1.405;
@@ -14,27 +14,102 @@
     text-align: center;
     text-decoration: none;
     text-transform: uppercase;
-    text-shadow: 0 0 10px rgba(255, 255, 255, 0.6);
 }
 
-.menu--horisontal {
+.menu__link--current {
+    border-bottom: 2px solid #edbfff;
+    padding: 0 11px 0 13px;
+}
+
+.menu--vertical {
+    background: #36293e;
+    border-radius: 10px;
+    opacity: 0.902;
+}
+
+.menu--vertical .menu__item{
+    width: 99%;
+    height: 48px;
+    border-style: solid;
+    border-width: 0 0 2px;
+    -moz-border-image: url(../img/header_menu_border_bottom.png) 0 0 2;
+    -webkit-border-image: url(../img/header_menu_border_bottom.png) 0 0 2;
+    -o-border-image: url(../img/header_menu_border_bottom.png) 0 0 2;
+    border-image: url(../img/header_menu_border_bottom.png) 0 0 2 fill;
+}
+
+
+.menu--vertical .menu__link:hover {
+    padding: 0;
+    width: 99%;
+    border-bottom: 2px solid #edbfff;
+}
+
+.menu--vertical .menu__item:nth-child(2) {
+    height: 37px;
+}
+
+.menu--vertical .menu__item:nth-child(3) {
+    height: 42px;
+}
+
+.menu--vertical .menu__item:nth-child(4) {
+    height: 39px;
+}
+
+.menu--vertical .menu__item:nth-child(5) {
+    height: 42px;
+}
+
+.menu--vertical .menu__item:nth-child(6) {
+    height: 41px;
+}
+
+
+
+
+.menu--vertical .menu__item:last-child {
+    border: none;
+}
+
+.menu--vertical .menu__link {
+    margin-top: 9px;
+}
+
+.menu--vertical .menu__item:nth-child(2) .menu__link {
+    margin-top: 1px;
+}
+
+.menu--vertical .menu__item:nth-child(3) .menu__link {
+    margin-top: 4px;
+}
+
+.menu--vertical .menu__item:nth-child(4) .menu__link {
+    margin-top: 2px;
+}
+
+.menu--vertical .menu__item:nth-child(5) .menu__link {
+    margin-top: 3px;
+}
+
+.menu--vertical .menu__item:nth-child(6) .menu__link {
+    margin-top: 1px;
+}
+
+.menu--horizontal {
     display: flex;
     justify-content: space-between;
 }
 
-.menu--horisontal .menu__item {
+.menu--horizontal .menu__item {
     display: inline-block;
-
-
 }
 
-.menu--horisontal .menu__link {
+.menu--horizontal .menu__link {
     border-bottom: none;
     font-size: 20px;
     text-align: left;
     text-shadow: 0 2px 2px rgba(0, 0, 0, 0.4);
-    letter-spacing: 0.025em;
-
-
+    letter-spacing: -0.01em;
 }
 
