--- a/Practice/HW7/css/width480.css
+++ b/Practice/HW7/css/width480.css
@@ -2,6 +2,20 @@
     .hidden-m {
         visibility: hidden;
     }
+    .header__nav {
+
+    }
+
+    .header__menu {
+        position: absolute;
+        top: 131px;
+        width: 53.135%;
+        left: 23.5%;
+    }
+
+    /*.menu--link {
+        display: none;
+    }*/
 
      .logo {
         padding-top: 73px;
@@ -24,14 +38,20 @@
     }
 
     .slider__img {
-       margin-top:-109px;
+       margin-top: -74px;
     }
 
     .slider__text {
+        margin-top: 34px;
         float: left;
         margin-left: 8px;
         margin-right: 17px;
     }
+
+    .slider__name {
+        margin-left: -1px;
+    }
+
 
     /*ABOUT COMPANY*/
 
@@ -185,7 +205,7 @@
 
     /*FOOTER*/
     .footer__menu {
-         margin-top: 42px;
+         margin-top: 41px;
     }
 
 
@@ -194,7 +214,7 @@
     }
 
     .footer__summary {
-        margin: 29px 0 144px;
+        margin: 30px 0 144px;
     }
 
 }
